refactor: using uri in loaders