@@ -12,7 +12,8 @@ import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 
 @RunWith(MockitoJUnitRunner.class)
@@ -25,28 +26,32 @@ public class GitLabLoaderTest {
     @Mock
     RepositoryFile mockedFile;
     private GitLabLoader gitLabLoader;
+
     @Before
-    public void init(){
+    public void init() {
         gitLabLoader = new GitLabLoader();
         gitLabLoader.configureGitLabLoader(mockedGitLab);
     }
+
     @Test
-    public void Test_load_json_file() throws IOException, GitLabApiException {
-        testLoadMethod(new URL("https://gitlab.com/dont-you/deref-test/-/blob/main/test.json"), "dont-you/deref-test","test.json","main");
-        testLoadMethod(new URL("https://gitlab.com/dont-you/git-tests/-/blob/master/src/test.json"), "dont-you/git-tests","src/test.json","master");
+    public void Test_load_json_file() throws IOException, GitLabApiException, URISyntaxException {
+        testLoadMethod(new URI("https://gitlab.com/dont-you/deref-test/-/blob/main/test.json"), "dont-you/deref-test", "test.json", "main");
+        testLoadMethod(new URI("https://gitlab.com/dont-you/git-tests/-/blob/master/src/test.json"), "dont-you/git-tests", "src/test.json", "master");
     }
-    private void testLoadMethod(URL url, String projectPath, String filePath, String ref) throws IOException, GitLabApiException {
+
+    private void testLoadMethod(URI uri, String projectPath, String filePath, String ref) throws IOException, GitLabApiException {
         initGitLabMocs(projectPath, filePath, ref);
-        gitLabLoader.loadSource(url);
+        gitLabLoader.loadSource(uri);
 
         Mockito.verify(mockedGitLab, Mockito.times(1)).getRepositoryFileApi();
-        Mockito.verify(mockedRepo, Mockito.times(1)).getFile(projectPath,filePath,ref);
+        Mockito.verify(mockedRepo, Mockito.times(1)).getFile(projectPath, filePath, ref);
         Mockito.verify(mockedFile, Mockito.times(1)).getDecodedContentAsBytes();
-        Mockito.clearInvocations(mockedGitLab,mockedRepo,mockedFile);
+        Mockito.clearInvocations(mockedGitLab, mockedRepo, mockedFile);
     }
+
     private void initGitLabMocs(String projectPath, String filePath, String ref) throws GitLabApiException {
         Mockito.when(mockedGitLab.getRepositoryFileApi()).thenReturn(mockedRepo);
-        Mockito.when(mockedRepo.getFile(projectPath,filePath,ref)).thenReturn(mockedFile);
+        Mockito.when(mockedRepo.getFile(projectPath, filePath, ref)).thenReturn(mockedFile);
         Mockito.when(mockedFile.getDecodedContentAsBytes()).thenReturn(new byte[]{});
     }
 }
